# weather-station

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6
.github/workflows/: github-actions.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
main/bh1750/: bh1750.cpp  bh1750.hpp  bh1750_defs.hpp
main/bme280/: bme280.c  bme280_defs.h
main/bmp280/: README.md  bmp2.c  bmp2_defs.h
main/interfaces/: interface_sensor.hpp
main/sensor/: sensor_task_interface.hpp  task_sensor.cpp  task_sensor.hpp
main/st7735/: esp_lcd_panel_custom_vendor.h  esp_lcd_panel_st7735.c
main/ui/: backlight.cpp  backlight.hpp  lunar_phase.cpp  lunar_phase.hpp  sun.c  task_ui.cpp  task_ui.hpp  ui_task_interface.hpp
main/ui/fonts/: lv_font_montserrat_8_german.c
main/ui/icons/: drop.c  full_moon.c  half_moon.c  new_moon.c  sun.c  waxing_crescent.c  waxing_gibbous.c
main/ulp/: CMakeLists.txt  main.cpp
main/wifi/: build_time.hpp  task_sntp.cpp  task_sntp.hpp  wifi_client.cpp  wifi_client.hpp  wifi_task_interface.hpp
